--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,10 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     namespace 'com.target.targetcasestudy'
